fix: visible wrapper consistent with figma

--- a/packages/openbridge-webcomponents/src/ar/poi-target-button-group/poi-target-button-group.css
+++ b/packages/openbridge-webcomponents/src/ar/poi-target-button-group/poi-target-button-group.css
@@ -15,31 +15,56 @@
   appearance: none;
   border: none;
   background: none;
-  padding: 0;
   margin: 0;
   font: inherit;
   color: inherit;
   height: 48px;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
   cursor: pointer;
   pointer-events: auto;
-  display: flex;
-  padding: 0 5px;
+  padding: var(--Maneuvering-components-poi-group-padding-unchecked-top, 6px)
+    var(--Maneuvering-components-poi-group-padding-unchecked-horizontal, 4px)
+    var(--Maneuvering-components-poi-group-padding-unchecked-bottom, 2px)
+    var(--Maneuvering-components-poi-group-padding-unchecked-horizontal, 4px);
   transform: translateY(-100%);
+
+  /* Override mixin colors for visible-wrapper */
+  --flat-enabled-border-color: transparent;
+  --flat-enabled-background-color: transparent;
+  --flat-hover-border-color: var(
+    --Color-Overlay-Styles-Flat-Hover-border-color,
+    rgba(255, 255, 255, 0.12)
+  );
+  --flat-hover-background-color: var(
+    --Color-Overlay-Styles-Flat-Enabled-background-color,
+    rgba(0, 0, 0, 0.32)
+  );
+  --flat-pressed-border-color: var(
+    --Color-Overlay-Styles-Flat-Active-border-color,
+    rgba(255, 255, 255, 0.12)
+  );
+  --flat-pressed-background-color: var(
+    --Color-Overlay-Styles-Flat-Active-background-color,
+    rgba(0, 0, 0, 0.48)
+  );
 
   @mixin style style=flat visibleWrapperClass=.visible-wrapper;
 }
 
 .visible-wrapper {
-  border-color: rgba(255, 255, 255, 0.3) !important;
-  width: 100%;
-  height: 40px;
-  border-radius: 18px;
-  margin-top: 5px;
-  padding: 4px 4px 6px 4px;
+  position: absolute;
+  left: 4px;
+  right: 4px;
+  top: 6px;
+  bottom: 2px;
+  border-radius: var(
+    --Maneuvering-components-poi-button-border-radius-round,
+    1000px
+  );
+  overflow: clip;
 }
 
 .backdrop {
